[FLINK-39938] FLIP-586: Composable Parallelism Alignment Modes for Flink Autoscaler